# PROI_Chess

./: CMakeLists.txt  Doxyfile  README.md
html/: Bishop_8cpp.html  Bishop_8cpp__incl.map  Bishop_8cpp__incl.md5  Bishop_8h.html  Bishop_8h__dep__incl.map  Bishop_8h__dep__incl.md5  Bishop_8h__incl.map  Bishop_8h__incl.md5  Bishop_8h_source.html  Board_8cpp.html  Board_8cpp__incl.map  Board_8cpp__incl.md5  Board_8h.html  Board_8h__dep__incl.map  Board_8h__dep__incl.md5  Board_8h__incl.map  Board_8h__incl.md5  Board_8h_source.html  ChessPiece_8cpp.html  ChessPiece_8cpp__incl.map  ChessPiece_8cpp__incl.md5  ChessPiece_8h.html  ChessPiece_8h__dep__incl.map  ChessPiece_8h__dep__incl.md5  ChessPiece_8h__incl.map  ChessPiece_8h__incl.md5  ChessPiece_8h_source.html  Enums_8h.html  Enums_8h__dep__incl.map  Enums_8h__dep__incl.md5  Enums_8h_source.html  GameInterface_8cpp.html  GameInterface_8cpp__incl.map  GameInterface_8cpp__incl.md5  GameInterface_8h.html  GameInterface_8h__dep__incl.map  GameInterface_8h__dep__incl.md5  GameInterface_8h__incl.map  GameInterface_8h__incl.md5  GameInterface_8h_source.html  (+189 more)
include/: Bishop.h  Board.h  ChessPiece.h  Enums.h  GameInterface.h  GameManager.h  King.h  Knight.h  PathPattern.h  Pawn.h  Player.h  Position.h  Queen.h  Rook.h  UtilityFunctions.h
latex/: Bishop_8cpp.tex  Bishop_8cpp__incl.md5  Bishop_8h.tex  Bishop_8h__dep__incl.md5  Bishop_8h__incl.md5  Board_8cpp.tex  Board_8cpp__incl.md5  Board_8h.tex  Board_8h__dep__incl.md5  Board_8h__incl.md5  ChessPiece_8cpp.tex  ChessPiece_8cpp__incl.md5  ChessPiece_8h.tex  ChessPiece_8h__dep__incl.md5  ChessPiece_8h__incl.md5  Enums_8h.tex  Enums_8h__dep__incl.md5  GameInterface_8cpp.tex  GameInterface_8cpp__incl.md5  GameInterface_8h.tex  GameInterface_8h__dep__incl.md5  GameInterface_8h__incl.md5  King_8cpp.tex  (+90 more)
(+51 files in other folders)
